--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "my-watcher",
   "version": "1.0.0",
-  "description": "Another ile watcher to build things when file a file changed",
+  "description": "Another file watcher to build things when file a file changed",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "gpl",
   "bin": {
     "my-watcher": "./my-watcher.js"
   }
